--- a/week2/BuyMeACoffee-contracts/package.json
+++ b/week2/BuyMeACoffee-contracts/package.json
@@ -19,5 +19,7 @@
     "hardhat-gas-reporter": "^1.0.8",
     "solidity-coverage": "^0.7.21"
   },
-  "dependencies": {}
+  "dependencies": {
+    "dotenv": "^16.0.1"
+  }
 }
