--- a/week5/package.json
+++ b/week5/package.json
@@ -5,7 +5,10 @@
   "license": "MIT",
   "dependencies": {
     "@chainlink/contracts": "^0.4.1",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.7.3",
+    "dotenv": "^16.0.2",
+    "ethereum-waffle": "^3.4.4",
     "hardhat": "^2.10.2"
   },
   "devDependencies": {
